# glamor-hybris

./: COPYING  README  configure.ac  glamor.c  glamor_composite_glyphs.c  glamor_copy.c  glamor_dash.c  glamor_egl.c  glamor_glyphblt.c  glamor_gradient.c  glamor_lines.c  glamor_picture.c  glamor_points.c  glamor_priv.h  glamor_rects.c  glamor_render.c  glamor_segs.c  glamor_spans.c  glamor_sync.c  glamor_text.c  glamor_utils.h  glamor_xv.c
src/: Makefile.am  glamor.c  glamor.h  glamor_composite_glyphs.c  glamor_egl.c  glamor_egl.h  glamor_egl_stubs.c  glamor_eglmodule.c  glamor_fbo.c  glamor_priv.h  glamor_render.c  glamor_sync.c  glamor_transfer.c  glamor_utils.h  glamor_xv.c
